Full functionality complete. Filter function taken as arg

--- a/test_circ_filter.ipynb
+++ b/test_circ_filter.ipynb
@@ -56,7 +56,8 @@
       "\n",
       "radius = 50\n",
       "size = 512   # These inputs should create a circle\n",
-      "function = 1"
+      "def filter_fn(radius):\n",
+      "    return 1"
      ],
      "language": "python",
      "metadata": {},
@@ -71,8 +72,16 @@
       "import sys\n",
       "import math\n",
       "import matplotlib.pyplot as plt\n",
-      "%matplotlib inline\n",
-      "\n",
+      "%matplotlib inline"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "# Returns radius of pixel, as given in x and y coordinates\n",
       "def pixel_radius(x,y):\n",
       "    radius = np.power( (np.power(x,2)+np.power(y,2)), 0.5 )\n",
@@ -102,8 +111,9 @@
       "    # Loop through all columns of row\n",
       "    for column in np.arange(edges['start'],edges['end']+1):\n",
       "        # Check if pixel is within circle's radius\n",
-      "        if (pixel_radius( (row-center),(column-center) )< radius):\n",
-      "            image[row,column] = 1\n"
+      "        pixelDist = pixel_radius( (row-center),(column-center) )\n",
+      "        if (pixelDist < radius):\n",
+      "            image[row,column] = filter_fn(pixelDist)\n"
      ],
      "language": "python",
      "metadata": {},
@@ -114,7 +124,6 @@
      "collapsed": false,
      "input": [
       "print(\"Radius = \", radius)\n",
-      "print(\"Radius Squared = \", rSq)\n",
       "print(\"Image Size = \", size)\n",
       "print(\"Center = \", center)\n",
       "print(\"Edges = \", edges)\n",
@@ -124,6 +133,105 @@
       "plt.colorbar()\n",
       "plt.show()"
      ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Making a function out of the above code:"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "def circ_filter1(radius, size, filter_fn):\n",
+      "    \n",
+      "    # Returns radius of pixel, as given in x and y coordinates\n",
+      "    def pixel_radius(x,y):\n",
+      "        radius = np.power( (np.power(x,2)+np.power(y,2)), 0.5 )\n",
+      "        return radius\n",
+      "    \n",
+      "    # Check if filter's radius is too large for defined size\n",
+      "    if (radius > (size/2.0)):\n",
+      "        print(\"Radius is larger than half the image size\")\n",
+      "        sys.exit()\n",
+      "    \n",
+      "    # Center of image indices, where filter will be centered\n",
+      "    center = (size-1)/2.0\n",
+      "    \n",
+      "    # Image indices for looping through area of image with \n",
+      "    #  the filter image\n",
+      "    edges = {\"start\":0,\n",
+      "             \"end\":0}\n",
+      "    edges[\"start\"]=np.floor(center-radius)\n",
+      "    edges[\"end\"]=np.ceil(center+radius)\n",
+      "    \n",
+      "    # Create Empty 2D array to hold pixel values\n",
+      "    image = np.zeros((size,size))\n",
+      "    \n",
+      "    # Loop through all pixels within square to draw circle\n",
+      "    # Loop through all rows\n",
+      "    for row in np.arange(edges['start'],edges['end']+1):\n",
+      "        # Loop through all columns of row\n",
+      "        for column in np.arange(edges['start'],edges['end']+1):\n",
+      "            # Check if pixel is within circle's radius\n",
+      "            pixelDist = pixel_radius( (row-center),(column-center) )\n",
+      "            if (pixelDist < radius):\n",
+      "                image[row,column] = filter_fn(pixelDist)\n",
+      "    \n",
+      "    return image\n",
+      "                   "
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Testing function"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Input values\n",
+      "\n",
+      "radius2 = 50\n",
+      "size2 = 512   # These inputs should create a circle\n",
+      "def function2(radius):\n",
+      "    if radius < 25:\n",
+      "        return 1\n",
+      "    else:\n",
+      "        return (-1/25)*(radius-25)+1\n",
+      "\n",
+      "# Run function\n",
+      "image2 = circ_filter1( radius2, size2, function2 )\n",
+      "\n",
+      "print(\"Radius = \", radius)\n",
+      "print(\"Image Size = \", size)\n",
+      "print(\"Center = \", center)\n",
+      "print(\"Edges = \", edges)\n",
+      "print(\"Image dimensions = \", image.shape)\n",
+      "\n",
+      "plt.imshow(image2)\n",
+      "plt.colorbar()\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
      "language": "python",
      "metadata": {},
      "outputs": []
