Completed interference filter

--- a/test_f_filter3.ipynb
+++ b/test_f_filter3.ipynb
@@ -136,9 +136,9 @@
       "psdDeconv1 = fftshift(deconv1(psdDoubleStar, psdSingleStar, constant))\n",
       "img8F = psdDeconv1\n",
       "\n",
-      "# Display Deconvolution Image (Input to filter)\n",
-      "disp_filter(img8F)\n",
-      "\n",
+      "plt.figure(figsize=(10,10))        \n",
+      "plt.imshow(img8F)\n",
+      "plt.show()\n",
       "\n",
       "# View one row of deconvolution to analyze interference noise\n",
       "plt.figure(figsize=(12,6))\n",
@@ -190,8 +190,6 @@
       "good_pixels_start2 = bad_pixels_end\n",
       "good_pixels_end2   = bad_pixels_end + good_pixels/2\n",
       "\n",
-      "keepout_radius = 40\n",
-      "\n",
       "# Generate list of good/bad pixel indices\n",
       "good_pixels_i = np.concatenate((np.arange(good_pixels_start1,good_pixels_end1)\n",
       "                             , np.arange(good_pixels_start2,good_pixels_end2)))\n",
@@ -202,20 +200,163 @@
       "print(\"Clean Pixel Indices: \", good_pixels_i)\n",
       "print(\"Bad Pixel Indices: \", bad_pixels_i)\n",
       "\n",
-      "#for row in np.arange(5):\n",
+      "# Show example bad pixels\n",
       "row = 256-30\n",
       "print(\"Good Pixels: \", img8F_exp[row,good_pixels_i])\n",
       "print(\"Bad Pixels: \", img8F_exp[row,bad_pixels_i])\n",
       "\n",
-      "#for row in np.arange(512):\n",
-      "#    if ( (row < (256-keepout_radius)) or (row > (256+keepout_radius)) ):\n",
-      " #       good_pixels_avg = np.average(img8F_exp[row,good_pixels_i])\n",
-      " #       img8F_exp[row,bad_pixels_i]=good_pixels_avg\n",
-      "                \n",
-      "img8F_exp[256-30,:] = 0        \n",
+      "# Assign filtered values\n",
+      "for row in np.arange(512):\n",
+      "    good_pixels_avg = np.average(img8F_exp[row,good_pixels_i])\n",
+      "    img8F_exp[row,bad_pixels_i]=good_pixels_avg      \n",
       "        \n",
       "plt.figure(figsize=(10,10))        \n",
       "plt.imshow(img8F_exp)\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "This wide filter has smudged the image too much in the center, where the valuable fringe information is contained. \n",
+      "\n",
+      "We see that the interference is close to 1 pixel wide in the center. This is the region of interest, so it is OK to only filter out this, outside the LPF it will all be filtered out"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Creating another array to experiment on\n",
+      "img9F_exp = np.array(img8F)\n",
+      "\n",
+      "# Perform filtering on vertical interference\n",
+      "for row in np.arange(512):\n",
+      "    good_pixels_avg = np.average(img9F_exp[row,(255, 257)])\n",
+      "    img9F_exp[row,256]=good_pixels_avg       \n",
+      "    \n",
+      "# Perform filtering on horizontal interference\n",
+      "for column in np.arange(512):\n",
+      "    good_pixels_avg = np.average(img9F_exp[(255, 257),column])\n",
+      "    img9F_exp[256,column]=good_pixels_avg   \n",
+      "        \n",
+      "plt.figure(figsize=(10,10))        \n",
+      "plt.imshow(img9F_exp)\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "In the region of the fringes, this gives its own distortion, but the problem is removed in the region outside of the fringes. \n",
+      "\n",
+      "How does this look when combined with the other filters?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "# Define LP gaussian function (to be used in forming highpass)\n",
+      "def filter_fn10_hp(radius):\n",
+      "    stdDev = 4\n",
+      "    amplitude = 0.8\n",
+      "    return np.multiply(0.8,np.exp(-(np.power(radius,2)/(2*np.power(stdDev,2)))))\n",
+      "\n",
+      "# Define LP gaussian function\n",
+      "def filter_fn10_lp(radius):\n",
+      "    stdDev = 10\n",
+      "    return np.exp(-(np.power(radius,2)/(2*np.power(stdDev,2))))\n",
+      "\n",
+      "# Calculate 2D Gaussian filter\n",
+      "# Generate lowpass filter to serve as inverse of highpass filter\n",
+      "filter10_hp = circ_filter1(radius = 255, size = 512, filter_fn = filter_fn10_hp)\n",
+      "# Generate array of 1's to be subtracted from\n",
+      "filter10_ones = np.zeros((512,512))\n",
+      "filter10_ones.fill(1)\n",
+      "# Calculate 1 - LP, which is HP\n",
+      "filter10 = np.subtract(filter10_ones,filter10_hp)\n",
+      "# Generate lowpass filter \n",
+      "filter10_lp = circ_filter1(radius = 255, size = 512, filter_fn = filter_fn10_lp)\n",
+      "\n",
+      "# Multiply LP and HP together\n",
+      "filter10 = np.multiply(filter10, filter10_lp)\n",
+      "\n",
+      "# Display filter\n",
+      "plt.figure(figsize=(10,10))        \n",
+      "plt.imshow(filter10)\n",
+      "plt.show()\n",
+      "\n",
+      "# Apply filter, view the results\n",
+      "img10F = img9F_exp*filter10\n",
+      "disp_filter(img10F)\n"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "This doesn't look very good, now there are quite significant lines right near the autocorrelation lobes, which I believe could lead so some significant problems when trying to find centroids.\n",
+      "\n",
+      "Lastly, I just want to do an experiment to view the IFFT of SQRT of the filtered image, which is what David Rowe said he does. Maybe this makes the lobes more/less visible?"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "plt.figure(figsize=(20,10))\n",
+      "\n",
+      "plt.subplot(1,2,1)\n",
+      "plt.imshow(np.abs(fftshift(ifft2((img10F)))))\n",
+      "plt.title(\"No Square Root\")\n",
+      "\n",
+      "plt.subplot(1,2,2)\n",
+      "plt.imshow(np.abs(fftshift(ifft2(np.sqrt(img10F)))))\n",
+      "plt.title(\"Square Root\")\n",
+      "\n",
+      "plt.show()"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": []
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "Reduces the interference signal that makes the vert/horiz lines, but also reduces the contrast of the lobes \n",
+      "\n",
+      "Comparing Autocorrs with and without interference filter"
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "plt.figure(figsize=(30,10))\n",
+      "\n",
+      "plt.subplot(1,2,1)\n",
+      "plt.imshow(np.abs(fftshift(ifft2((np.multiply(filter10,img8F))))))\n",
+      "plt.title(\"No Interference Filter\")\n",
+      "plt.colorbar()\n",
+      "\n",
+      "plt.subplot(1,2,2)\n",
+      "plt.imshow((np.abs(fftshift(ifft2(img10F)))))\n",
+      "plt.title(\"Interference Filter\")\n",
+      "plt.colorbar()\n",
+      "\n",
       "plt.show()"
      ],
      "language": "python",
