Radius of circle fitting inside contour calculated

--- a/15-12-28_centroids.ipynb
+++ b/15-12-28_centroids.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 15-12-23\n",
+    "# 15-12-28\n",
     "\n",
-    "Now that we've seen the centroid finding algorithm work on some images, we'd like to test it on as many as possible"
+    "Right now the masks for centroid finding are the shape of the contour. PS3 uses a circle centered on the peak of the contour. I'd like to compare these two strategies to see if they give radically different results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -28,6 +28,7 @@
     "from speckle_fns import fits_view\n",
     "import sys\n",
     "import cv2\n",
+    "import math\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -36,7 +37,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -83,8 +84,7 @@
     "\n",
     "plt.figure(figsize=(15,15))\n",
     "plt.imshow(fftshift(np.log10(psdDoubleStar)))\n",
-    "plt.title(\"Double Star PSD\")\n",
-    "\n"
+    "plt.title(\"Double Star PSD\")\n"
    ]
   },
   {
@@ -102,32 +102,15 @@
     "# Filter PSD:\n",
     "imgF_filtered = filter_interference(imgF)\n",
     "imgF_filtered = filter_lpf(imgF_filtered, 10)\n",
-    "#imgF_filtered = filter_hpf(imgF_filtered, 6, 0.8)\n",
     "\n",
     "# Postprocess\n",
     "img_autocorr = postprocess(imgF_filtered)\n",
     "\n",
     "# Plot Image\n",
-    "plt.figure(figsize = (12,6))\n",
-    "plt.subplot(1,2,1)\n",
-    "plt.imshow(np.log10(imgF_filtered+1E-12))\n",
-    "plt.title(\"Filtered PSD\")\n",
-    "plt.colorbar()\n",
-    "plt.subplot(1,2,2)\n",
+    "plt.figure(figsize = (8,8))\n",
     "plt.imshow(img_autocorr)\n",
     "plt.title(\"Autocorr of Filtered Image\")\n",
-    "plt.colorbar()\n",
-    "\n",
-    "# Create variables for surface plot\n",
-    "x = np.arange(512)\n",
-    "y = np.arange(512)\n",
-    "x,y = np.meshgrid(x,y)\n",
-    "z = img_autocorr\n",
-    "\n",
-    "# Plot surface plot \n",
-    "fig = plt.figure(figsize=(16,16))\n",
-    "ax = fig.gca(projection='3d')\n",
-    "surf = ax.plot_surface(x,y,z,rstride=5,cstride=5, linewidth=0)"
+    "plt.colorbar()\n"
    ]
   },
   {
@@ -141,7 +124,7 @@
     "# Want to find the lowest threshold that we only see the 3 main lobes\n",
     "\n",
     "# New variable for operating on\n",
-    "autocorr = np.array(z)\n",
+    "autocorr = img_autocorr\n",
     "\n",
     "# Start thresh at max value of autocorr (assuming that is from central peak)\n",
     "threshold = np.floor(autocorr.max())\n",
@@ -182,18 +165,9 @@
     "autocorr_thresh[above_thresh_i] = 255\n",
     "autocorr_thresh = autocorr_thresh.astype(np.uint8)\n",
     "        \n",
-    "print(threshold)\n",
-    "plt.imshow(autocorr_thresh)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "#print(threshold)\n",
+    "#plt.imshow(autocorr_thresh)\n",
+    "\n",
     "# Now we've found our 3 main contours. Keep stepping down until we don't see 3 anymore\n",
     "# Can be less than 3 if they start to blend together, or more than 3 if other noise in\n",
     "#  image appears\n",
@@ -225,18 +199,9 @@
     "autocorr_thresh[above_thresh_i] = 255\n",
     "autocorr_thresh = autocorr_thresh.astype(np.uint8)\n",
     "        \n",
-    "print(threshold)\n",
-    "plt.imshow(autocorr_thresh)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
+    "#print(threshold)\n",
+    "#plt.imshow(autocorr_thresh)\n",
+    "\n",
     "# Step back up in threshold until we are back to 3 contours\n",
     "while (num_contours != 3):\n",
     "    # Decrement the threshold\n",
@@ -263,13 +228,13 @@
     "    \n",
     "# Create thresholded image\n",
     "autocorr_thresh = np.zeros(np.shape(autocorr))\n",
-    "autocorr_thresh[above_thresh_i] = 255\n",
+    "autocorr_thresh[above_thresh_i] = 1\n",
     "autocorr_thresh = autocorr_thresh.astype(np.uint8)\n",
     "\n",
     "# Display results\n",
-    "print(threshold)\n",
+    "print(\"Final Threshold = \",threshold)\n",
     "plt.figure(figsize=(8,8))\n",
-    "plt.imshow(autocorr_thresh)"
+    "plt.imshow(np.multiply(autocorr_thresh,autocorr))"
    ]
   },
   {
@@ -280,17 +245,128 @@
    },
    "outputs": [],
    "source": [
-    "-"
+    "## Now that we have the contours, we want to find their centroids for sorting purposes\n",
+    "centroid = np.zeros((3,2))\n",
+    "\n",
+    "for i in np.arange(3):\n",
+    "    # Calculating Image Moment/Raw Moment of contour\n",
+    "    M = cv2.moments(contours[i])\n",
+    "    \n",
+    "    # Calculate centroid X and Y components \n",
+    "    cx = int(M['m10']/M['m00'])\n",
+    "    cy = int(M['m01']/M['m00'])\n",
+    "    \n",
+    "    centroid[i] = (cy, cx)\n",
+    "    \n",
+    "## Find the central contour\n",
+    "# Center pixel indices\n",
+    "center = np.divide(np.shape(autocorr),2)\n",
+    "center_distance = np.zeros(3)\n",
+    "\n",
+    "# Calculate distance from each centroid to center of image\n",
+    "for i in np.arange(3):\n",
+    "    center_distance[i] = np.linalg.norm(centroid[i] - center)\n",
+    "\n",
+    "# Get index of central contour as contour with min distance to center\n",
+    "i = np.where(center_distance == center_distance.min())\n",
+    "i_center = i[0]\n",
+    "\n",
+    "# Calculate central contour mask\n",
+    "mask_center = np.zeros(np.shape(autocorr))\n",
+    "cv2.drawContours(mask_center,contours,i_center,(1,1,1),-1)\n",
+    "\n",
+    "## Finding indices of side lobes\n",
+    "# Possible indices of side lobes\n",
+    "i_side_lobes = [0,1,2]\n",
+    "# Remove the center lobe index\n",
+    "i_side_lobes.remove(i_center)\n",
+    "\n",
+    "# Make empty mask images\n",
+    "mask_side = np.zeros((2,np.shape(autocorr)[0],np.shape(autocorr)[1]))\n",
+    "lobe_side = np.zeros((2,np.shape(autocorr)[0],np.shape(autocorr)[1]))\n",
+    "\n",
+    "# Create masks and calculate side lobes\n",
+    "for i in np.arange(2):\n",
+    "    cv2.drawContours(mask_side[i],contours,i_side_lobes[i],(1,1,1),-1)\n",
+    "    lobe_side[i] = (np.multiply(autocorr,mask_side[i]))#.astype(np.uint8)\n",
+    "\n",
+    "# Display masked side lobes\n",
+    "plt.figure(figsize=(12,6))\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.imshow(lobe_side[0])\n",
+    "plt.title(\"Side Lobe 1\")\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(lobe_side[1])\n",
+    "plt.title(\"Side Lobe 2\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "## Want to find peak locations of each side lobe image\n",
+    "# Array to hold peak values\n",
+    "lobe_peak = np.zeros((2,2))\n",
+    "\n",
+    "# Find peak values\n",
+    "for i in np.arange(2):\n",
+    "    peak = np.where(lobe_side[i] == lobe_side[i].max())\n",
+    "    lobe_peak[i,1] = peak[0][0] # Assigning Y value of peak\n",
+    "    lobe_peak[i,0] = peak[1][0] # Assigning X value of peak\n",
+    "    \n",
+    "# Create images of sidelobes with peaks marked\n",
+    "lobe_side_peak = np.array(lobe_side)\n",
+    "\n",
+    "# Put lines on sidelobe 0\n",
+    "lobe_side_peak[0,:,np.round(lobe_peak[0,0]).astype(int)] = 0\n",
+    "lobe_side_peak[0,np.round(lobe_peak[0,1]).astype(int),:] = 0\n",
+    "\n",
+    "# Put lines on sidelobe 1\n",
+    "lobe_side_peak[1,:,np.round(lobe_peak[1,0]).astype(int)] = 0\n",
+    "lobe_side_peak[1,np.round(lobe_peak[1,1]).astype(int),:] = 0   \n",
+    "\n",
+    "# View peak locations\n",
+    "plt.figure(figsize=(12,6))\n",
+    "plt.subplot(1,2,1)\n",
+    "plt.imshow(lobe_side_peak[0])\n",
+    "plt.subplot(1,2,2)\n",
+    "plt.imshow(lobe_side_peak[1])\n",
+    "\n",
+    "# Print peak locations\n",
+    "print(lobe_peak)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "## Finding radius of circle centered on peak that fits inside contour\n",
+    "\n",
+    "lobe_mask_radius = np.zeros(2) # Radius of circles to be calculated \n",
+    "lobe_mask_radius.fill(math.inf) # Initial value = Infinite\n",
+    "\n",
+    "# Calculate for each side lobe\n",
+    "for i in np.arange(2):\n",
+    "    # For each point on contour\n",
+    "    for perimeter_point in contours[i_side_lobes[i]]: \n",
+    "        # Calculating distance between peak and present contour point\n",
+    "        distance = np.linalg.norm(perimeter_point - lobe_peak[i])\n",
+    "        # Save the minimum value of previously calculated min radius and present calc\n",
+    "        lobe_mask_radius[i] = min([lobe_mask_radius[i],distance])\n",
+    "     \n",
+    "print(lobe_mask_radius)\n",
+    "        \n",
+    "#plt.figure(figsize=(10,10))\n",
+    "#plt.imshow(blank)"
+   ]
   }
  ],
  "metadata": {
