Viewing circles on autocorrelogram

--- a/15-12-28_centroids.ipynb
+++ b/15-12-28_centroids.ipynb
@@ -362,11 +362,52 @@
     "        # Save the minimum value of previously calculated min radius and present calc\n",
     "        lobe_mask_radius[i] = min([lobe_mask_radius[i],distance])\n",
     "     \n",
-    "print(lobe_mask_radius)\n",
-    "        \n",
-    "#plt.figure(figsize=(10,10))\n",
-    "#plt.imshow(blank)"
+    "print(lobe_mask_radius)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 15-12-29\n",
+    "\n",
+    "Now that we are finding the minimum radius, lets draw the circles to create the masks and apply the masks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# Confirming that these circles are centered on the maximum value\n",
+    "\n",
+    "# Creating fully filled in mask\n",
+    "autocorr_marked = np.zeros((512,512,3))\n",
+    "autocorr_marked.fill(1)\n",
+    "\n",
+    "# Marking the mask with circles centered on peaks\n",
+    "cv2.circle(autocorr_marked, (lobe_peak[0,0].astype(np.uint16),lobe_peak[0,1].astype(np.uint16)), lobe_mask_radius[0].astype(np.uint8), (0,0,0), 2)\n",
+    "cv2.circle(autocorr_marked, (lobe_peak[1,0].astype(np.uint16),lobe_peak[1,1].astype(np.uint16)), lobe_mask_radius[1].astype(np.uint8), (0,0,0), 2)\n",
+    "\n",
+    "# Apply the mask to the autocorrelogram\n",
+    "autocorr_marked = autocorr_marked[:,:,0]*autocorr\n",
+    "\n",
+    "# View marked autocorrelogram\n",
+    "plt.figure(figsize=(10,10))\n",
+    "plt.imshow(autocorr_marked)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
