Comparing peak centered sphere and contour centroids

--- a/15-12-28_centroids.ipynb
+++ b/15-12-28_centroids.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Select which set of data to use:\n",
-    "k = 0\n",
+    "k = 2\n",
     "\n",
     "# View sample fits images:\n",
     "imgDoubleStar = fits_view(fileDirectory+filenames[k][0]+'.fits',0)\n",
@@ -528,7 +528,104 @@
     "\n",
     "plt.subplot(1,3,3)\n",
     "plt.imshow(autocorr_cen)\n",
-    "plt.title(\"Both Sidelobe Centroid Locations\")"
+    "plt.title(\"Both Sidelobe Centroid Locations\")\n",
+    "\n",
+    "centroid_peak = np.array(centroid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "## Calculating intensity weighted centroid of side lobes\n",
+    "\n",
+    "M00 = np.zeros((2))\n",
+    "M10 = np.zeros((2))\n",
+    "M01 = np.zeros((2))\n",
+    "centroid = np.zeros((2,2))\n",
+    "\n",
+    "# Calculate for each side lobe\n",
+    "for lobe in np.arange(2):\n",
+    "    \n",
+    "    # Calculate average\n",
+    "    M00[lobe] = np.sum(lobe_side[lobe])\n",
+    "    \n",
+    "    # Calculate X component\n",
+    "    # Loop through each column\n",
+    "    for column in np.arange(np.shape(lobe_side[lobe])[1]):\n",
+    "        \n",
+    "        M10[lobe] += np.multiply(column,np.sum(lobe_side[lobe,:,column]))\n",
+    "        \n",
+    "        #print('X = ', column, np.multiply(column,np.sum(lobe_side[lobe,:,column])))\n",
+    "    \n",
+    "    # Calculate Y component\n",
+    "    # Loop through each column\n",
+    "    for row in np.arange(np.shape(lobe_side[lobe])[0]):\n",
+    "        \n",
+    "        M01[lobe] += np.multiply(row,np.sum(lobe_side[lobe,row,:]))\n",
+    "    \n",
+    "    # Calculate X and Y Centroid Components of each lobe\n",
+    "    centroid[lobe,0] = M10[lobe]/M00[lobe] # X Component\n",
+    "    centroid[lobe,1] = M01[lobe]/M00[lobe] # Y Component\n",
+    "\n",
+    "# Print results of centroid finding\n",
+    "print(M00)\n",
+    "print(M10)\n",
+    "print(M01)\n",
+    "print(centroid[0,0], centroid[0,1])\n",
+    "print(centroid[1,0], centroid[1,1])\n",
+    "\n",
+    "# Print original image with centroid locations overlayed\n",
+    "autocorr_cen = np.array(autocorr)\n",
+    "lobe_cen = np.array(lobe_side)\n",
+    "\n",
+    "# Put lines on X coordinates of centroids\n",
+    "autocorr_cen[:,np.round(centroid[0,0]).astype(int)] = 0\n",
+    "autocorr_cen[:,np.round(centroid[1,0]).astype(int)] = 0\n",
+    "# Put lines on Y coordinates of centroids\n",
+    "autocorr_cen[np.round(centroid[0,1]).astype(int),:] = 0\n",
+    "autocorr_cen[np.round(centroid[1,1]).astype(int),:] = 0\n",
+    "\n",
+    "# Put lines on sidelobe 0\n",
+    "lobe_cen[0,:,np.round(centroid[0,0]).astype(int)] = 0\n",
+    "lobe_cen[0,np.round(centroid[0,1]).astype(int),:] = 0\n",
+    "\n",
+    "# Put lines on sidelobe 1\n",
+    "lobe_cen[1,:,np.round(centroid[1,0]).astype(int)] = 0\n",
+    "lobe_cen[1,np.round(centroid[1,1]).astype(int),:] = 0\n",
+    "\n",
+    "# Graph all centroid marked plots\n",
+    "plt.figure(figsize=(20,8))\n",
+    "\n",
+    "plt.subplot(1,3,1)\n",
+    "plt.imshow(lobe_cen[0])\n",
+    "plt.title(\"Sidelobe 0 Centroid Location\")\n",
+    "\n",
+    "plt.subplot(1,3,2)\n",
+    "plt.imshow(lobe_cen[1])\n",
+    "plt.title(\"Sidelobe 1 Centroid Location\")\n",
+    "\n",
+    "plt.subplot(1,3,3)\n",
+    "plt.imshow(autocorr_cen)\n",
+    "plt.title(\"Both Sidelobe Centroid Locations\")\n",
+    "\n",
+    "centroid_contour = np.array(centroid)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "print(\"Centroids (Sphere centered on peak)\", '\\n', centroid_peak)\n",
+    "print(\"Centroids (Contours)\", \"\\n\", centroid_contour)"
    ]
   }
  ],
