Compared centroid methods for peak and contour masking

--- a/15-12-28_centroids.ipynb
+++ b/15-12-28_centroids.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "# Select which set of data to use:\n",
-    "k = 2\n",
+    "k = 0\n",
     "\n",
     "# View sample fits images:\n",
     "imgDoubleStar = fits_view(fileDirectory+filenames[k][0]+'.fits',0)\n",
@@ -626,6 +626,57 @@
    "source": [
     "print(\"Centroids (Sphere centered on peak)\", '\\n', centroid_peak)\n",
     "print(\"Centroids (Contours)\", \"\\n\", centroid_contour)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "\n",
+    "k = 0: <br />\n",
+    "Centroids (Sphere centered on peak) <br />\n",
+    " [[ 403.24772626  405.91946966]<br />\n",
+    " [ 108.75227374  106.08053034]]<br />\n",
+    "Centroids (Contours) <br />\n",
+    " [[ 403.37878518  405.93153327]<br />\n",
+    " [ 108.62121482  106.06846673]]<br />\n",
+    " \n",
+    "k = 1:<br />\n",
+    "\n",
+    "Centroids (Sphere centered on peak) <br />\n",
+    " [[ 220.00967484  255.04554408]<br />\n",
+    " [ 291.99032516  256.95445592]]<br />\n",
+    "Centroids (Contours) <br />\n",
+    " [[ 219.52224404  258.60562117]<br />\n",
+    " [ 292.47775596  253.39437883]]<br />\n",
+    " \n",
+    " k = 2: <br />\n",
+    " Centroids (Sphere centered on peak) <br />\n",
+    " [[ 469.02557551  506.57034716]<br />\n",
+    " [  42.97582522    5.06646098]]<br />\n",
+    "Centroids (Contours) <br />\n",
+    " [[ 469.27102281  506.21833824]<br />\n",
+    " [  42.75022255    5.38711535]]<br />\n",
+    " \n",
+    " k = 3 <br/>\n",
+    "Centroids (Sphere centered on peak) <br/>\n",
+    " [[ 225.11283002  274.88879163]<br/>\n",
+    " [ 286.88716998  237.11120837]]<br/>\n",
+    "Centroids (Contours) <br/>\n",
+    " [[ 226.27968543  274.05319041]<br/>\n",
+    " [ 285.72031457  237.94680959]]<br/>\n",
+    " \n",
+    " k = 4 <br/>\n",
+    " Centroids (Sphere centered on peak) <br/>\n",
+    " [[ 282.11470187  275.93283984]<br/>\n",
+    " [ 229.88529813  236.06716016]]<br/>\n",
+    "Centroids (Contours) <br/>\n",
+    " [[ 282.26341204  275.74745327]<br/>\n",
+    " [ 229.73658796  236.25254673]]<br/>\n",
+    " \n",
+    " k = 5 <br/>\n",
+    " Error moving below 3 contours"
    ]
   }
  ],
