Added comments specifying which centroid method being used

--- a/15-12-28_centroids.ipynb
+++ b/15-12-28_centroids.ipynb
@@ -458,7 +458,7 @@
    },
    "outputs": [],
    "source": [
-    "## Calculating intensity weighted centroid of side lobes\n",
+    "## Calculating intensity weighted centroid of side lobes, with circular masking\n",
     "\n",
     "M00 = np.zeros((2))\n",
     "M10 = np.zeros((2))\n",
@@ -541,7 +541,7 @@
    },
    "outputs": [],
    "source": [
-    "## Calculating intensity weighted centroid of side lobes\n",
+    "## Calculating intensity weighted centroid of side lobes, using entire contour\n",
     "\n",
     "M00 = np.zeros((2))\n",
     "M10 = np.zeros((2))\n",
